Fixing scroll on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,8 +29,12 @@ body {
 }
 main {
   overflow-y: scroll;
+  overflow-x: hidden;
+  touch-action: pan-y;
 }
+
 ::-webkit-scrollbar { width: 0 !important }
+
 .main {
   width : 100%;
   min-height: 100vh;
